--- a/profile_scraper/templates/profile_scraper/index.html
+++ b/profile_scraper/templates/profile_scraper/index.html
@@ -1,10 +1,8 @@
 <h1>Twitter Profile Scraper</h1>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-<form action="" method="post">
-{% csrf_token %}
+<form action="/profile_scraper/lookup.html" method="post">
+    {% csrf_token %}
     <label for="handle">Search for Twitter User based on Twitter handle</label>
-    <input type="text" name="handle" id="handle">
+    <input type="text" name="handle" id="handle" value="{{ profile.screen_name }}">
     <input type="submit" value="Search">
 </form>
