--- a/profile_scraper/templates/profile_scraper/index.html
+++ b/profile_scraper/templates/profile_scraper/index.html
@@ -74,15 +74,17 @@
         <div class="row">
           <table class="table table-striped">
             <tr>
-              <th>Firstname</th>
-              <th>Lastname</th>
-              <th>Age</th>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Twitter</th>
             </tr>
-            <tr>
-              <td>Jill</td>
-              <td>Smith</td>
-              <td>50</td>
-            </tr>
+            {% for user in users %}
+                <tr>
+                  <td>{{ user.firstName }}</td>
+                  <td>{{ user.lastName }}</td>
+                  <td>{{ user.twitterSource }}</td>
+                </tr>
+            {% endfor %}
           </table>
         </div>
       </div>
