--- a/profile_scraper/templates/profile_scraper/index.html
+++ b/profile_scraper/templates/profile_scraper/index.html
@@ -17,9 +17,68 @@
   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
   crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+  <script>
+  $( function() {
+    var availableTags = [
+      "ActionScript",
+      "AppleScript",
+      "Asp",
+      "BASIC",
+      "C",
+      "C++",
+      "Clojure",
+      "COBOL",
+      "ColdFusion",
+      "Erlang",
+      "Fortran",
+      "Groovy",
+      "Haskell",
+      "Java",
+      "JavaScript",
+      "Lisp",
+      "Perl",
+      "PHP",
+      "Python",
+      "Ruby",
+      "Scala",
+      "Scheme",
+    {% for user in users %}
+        "@{{ user.twitterUserName }}",
+    {% endfor %}
+    ];
+    $( "#twitterUserName" ).autocomplete({
+      source: availableTags
+    });
+  } );
+  </script>
+      <style>
+        .ui-autocomplete {
+          position: absolute;
+          top: 100%;
+          left: 0;
+          z-index: 1000;
+          display: none;
+          float: left;
+          min-width: 160px;
+          padding: 5px 0;
+          margin: 2px 0 0;
+          list-style: none;
+          font-size: 14px;
+          text-align: left;
+          background-color: #ffffff;
+          border: 1px solid #cccccc;
+          border: 1px solid rgba(0, 0, 0, 0.15);
+          border-radius: 4px;
+          -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          background-clip: padding-box;
+        }
 
+      </style>
   </head>
 
   <body>
@@ -70,19 +129,29 @@
         <div class="col-md-3">
         </div>
       </div>
+    </div>
+    <br/>
+    <br/>
+    <br/>
       <div class="container">
         <div class="row">
           <table class="table table-striped">
             <tr>
-              <th>First Name</th>
-              <th>Last Name</th>
+              <th>Name</th>
+              <th>Position</th>
+              <th>Company</th>
+              <th>Industry</th>
               <th>Twitter</th>
+              <th>LinkedIn</th>
             </tr>
             {% for user in users %}
                 <tr>
-                  <td>{{ user.firstName }}</td>
-                  <td>{{ user.lastName }}</td>
-                  <td>{{ user.twitterSource }}</td>
+                  <td>{{ user.firstName }} {{ user.lastName }}</td>
+                  <td>{{ user.jobTitle }}</td>
+                  <td>{{ user.company }}</td>
+                  <td>{{ user.cdIndustry }}</td>
+                  <td><a href="{{ user.twitterSource }}">@{{ user.twitterUserName }}</a></td>
+                  <td><a href="{{ user.linkedin }}">View</a></td>
                 </tr>
             {% endfor %}
           </table>
@@ -101,5 +170,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </body>
 </html>
