--- a/profile_scraper/templates/profile_scraper/index.html
+++ b/profile_scraper/templates/profile_scraper/index.html
@@ -24,28 +24,6 @@
   <script>
   $( function() {
     var availableTags = [
-      "ActionScript",
-      "AppleScript",
-      "Asp",
-      "BASIC",
-      "C",
-      "C++",
-      "Clojure",
-      "COBOL",
-      "ColdFusion",
-      "Erlang",
-      "Fortran",
-      "Groovy",
-      "Haskell",
-      "Java",
-      "JavaScript",
-      "Lisp",
-      "Perl",
-      "PHP",
-      "Python",
-      "Ruby",
-      "Scala",
-      "Scheme",
     {% for user in users %}
         "@{{ user.twitterUserName }}",
     {% endfor %}
@@ -135,7 +113,7 @@
     <br/>
       <div class="container">
         <div class="row">
-          <table class="table table-striped">
+          <table class="table table-striped table-hover">
             <tr>
               <th>Name</th>
               <th>Position</th>
