Shenanigans cancelled :zap:

--- a/profile_scraper/templates/profile_scraper/index.html
+++ b/profile_scraper/templates/profile_scraper/index.html
@@ -79,7 +79,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-          <h1 class="text-center"><i class="em em-zap"></i><i class="em em-fire"></i>Twitter Classifier<i class="em em-fire"></i><i class="em em-zap"></i></h1>
+          <h1>Twitter Classifier</h1>
         <p>We classify tweets from a given Twitter user in two types business and non-business. We take information
             available through a LeadSift database CSV dump to generate a list of user  candidates. From this list of
             candidates we use text pre-processing (punctuation, digits and stop words) and a weighting algorithm to
