--- a/profile_scraper/templates/profile_scraper/index.html
+++ b/profile_scraper/templates/profile_scraper/index.html
@@ -70,7 +70,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Twitter Classifier</a>
+            <a class="navbar-brand" href="/">Welcome</a>
+            <a class="navbar-brand" href="/twitter_classifier">Twitter Classifier</a>
         </div>
       </div>
     </nav>
